# Prepaid-POS

./: .prettierignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts  vitest.config.mts
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  annex_data.sqlite  tauri.conf.json
src-tauri/migrations/: 0001_add_operator_table.sql  0002_add_product_related_tables.sql  0003_add_categories.sql  0004_add_customer_club.sql  0005_add_customer_transactions.sql  0006_add_password.sql  0007_add_weekly_limit.sql
src-tauri/src/: commands.rs  error.rs  lib.rs  logger.rs  main.rs
src-tauri/src/application/common/: db.rs
src-tauri/src/application/use_cases/: auth_usecases.rs  club_usecases.rs  legacy_migration_usecases.rs  mod.rs  operator_usecases.rs  pdf_parse_usecases.rs  pos_usecases.rs  (+4 more)
src-tauri/src/commands/: auth.rs  mod.rs
src-tauri/src/common/: auth.rs  error.rs  logger.rs  mod.rs  mutex_ext.rs  print.rs  rwlock_ext.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/infrastructure/: command_runner.rs  db.rs  mod.rs  pdf_parser.rs
src-tauri/src/interface/: mod.rs
src-tauri/src/services/: mod.rs  operator_service.rs
src-tauri/src/test_support/: mock_category_repo.rs  mock_club_import_repo.rs  mock_club_tx_repo.rs  mock_cred_repo.rs  mock_customer_repo.rs  mock_customer_tx_detail_repo.rs  mock_customer_tx_repo.rs  mock_inventory_transaction_repo.rs  mock_operator_repo.rs  mock_price_adjustment_repo.rs  mock_product_repo.rs  mock_weekly_limit_repo.rs  mod.rs
src-tauri/tests/: sqlite_repo.rs
(+233 files in other folders)
