[package]
name = "mdoc_annex_pos"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdoc_annex_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fern = "0.7"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rusqlite = { version = "0.36", features = ["chrono", "bundled"] }
rusqlite_migration = "2.2"
thiserror ="2.0"
dotenvy = "0.15"
validator = "0.20"
validator_derive = "0.20"
serde_bytes = "0.11"
lopdf = "0.36"
